--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.0
+  rxdart: ^0.27.2
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,15 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/navigate/tabbar_icon_local.png
+    - assets/images/navigate/tabbar_icon_local_active.png
+    - assets/images/navigate/tabbar_icon_my.png
+    - assets/images/navigate/tabbar_icon_my_active.png
+    - assets/images/navigate/tabbar_icon_recite_words.png
+    - assets/images/navigate/tabbar_icon_recite_words_active.png
+    - assets/images/navigate/tabbar_icon_thesaurus.png
+    - assets/images/navigate/tabbar_icon_thesaurus_active.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
