--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.0
   rxdart: ^0.27.2
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.7
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,8 @@ flutter:
     - assets/images/navigate/tabbar_icon_recite_words_active.png
     - assets/images/navigate/tabbar_icon_thesaurus.png
     - assets/images/navigate/tabbar_icon_thesaurus_active.png
+    - assets/images/icons/arrow_right.png
+    - assets/images/dev/JAP.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
